<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GNU AR MAP</string>
    <string name="search_hint">Search Location</string>

    <string name="OSM">OSM</string>
    <string name="MIXARE">Mixare</string>

    <string name="N">N</string>
    <string name="NE">NE</string>
    <string name="E">E</string>
    <string name="SE">SE</string>
    <string name="S">S</string>
    <string name="SW">SW</string>
    <string name="W">W</string>
    <string name="NW">NW</string>

    <string name="CIRCLE_MARKER">Circles</string>
    <string name="NAVIGATION_MARKER">Arrows</string>

    <string name="empty_list">Sorry, \nThere is no location information \navailable within this radius.\nPlease try to search in a wider range.</string>

    <string name="license">Copyright (C) 2010- Peer internet solutions
		\n\nThis program is free software: 	you can redistribute it and/or modify it under the terms of the 
		GNU General Public License as published by the Free Software Foundation, either version 3 of the License, 
		or at your option) any later version. 
		\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even 
		the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public 
		License for more details. 
		\n\n You should have received a copy of the GNU General Public License along with this program. 
		If not, see &lt;http://www.gnu.org/licenses/&gt;
	</string>
    <string name="GPSWarningTitle">GPS Warning</string>
    <string name="GPSWarning">When using indoors, the marker height may be incorrect, so please use it outdoors if possible.</string>

    <string name="launch_plugins">Launch plugins?</string>
    <string name="plugin_message">Some plugins where found, do you want to enable them?</string>
    <string name="remember_this_decision">Remember this decision</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="menu_item_1">Data Source</string>
    <string name="menu_item_2">List view</string>
    <string name="menu_item_3">Map view</string>
    <string name="menu_item_4">Zoom level</string>
    <string name="menu_item_5">Search</string>
    <string name="menu_item_6">Info</string>
    <string name="menu_item_7">License</string>

    <string name="cancel">Cancel</string>

    <string name="data_source_edit_err">This data source cannot be edited.</string>
    <string name="data_source_delete_err">This data source cannot be deleted.</string>

    <string name="connection_error_dialog">Sorry, a connection Error occured! \nPlease check if you are connected to the Internet.</string>
    <string name="connection_error_dialog_button1">Retry</string>
    <string name="connection_error_dialog_button2">Open Settings</string>
    <string name="connection_error_dialog_button3">Close App</string>

    <string name="connection_GPS_dialog_text">The GPS location can not be updated... \nIf you continue it could be that the Information
		\nwill not be displayed in the right place.</string>
    <string name="connection_GPS_dialog_button1">Continue</string>
    <string name="connection_GPS_dialog_button2">Close</string>

    <string name="no_website_available">Sorry, there is no further \ninformation available.</string>

    <string name="license_title">License</string>
    <string name="close_button">Close</string>
    <string name="general_info_title">General Information</string>

    <string name="general_info_text">GPS info: </string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="altitude">Altitude: </string>
    <string name="speed">Speed: </string>
    <string name="accuracy">Accuracy: </string>
    <string name="gps_last_fix">Last GPS fix: </string>

    <string name="map_menu_normal_mode">Map</string>
    <string name="map_menu_satellite_mode">Satellite</string>
    <string name="map_menu_cam_mode">Camera</string>
    <string name="map_my_location">My Location</string>
    <string name="map_toggle_path_on">Show Path</string>
    <string name="map_toggle_path_off">Hide Path</string>

    <string name="map_current_location_click">Your current location</string>

    <string name="data_source_add">Add data source</string>
    <string name="data_source_edit">Edit data source</string>
    <string name="data_source_delete">Delete data source</string>
    <string name="data_source_change_wikipedia">Changed to Wikipedia as data source</string>
    <string name="data_source_change_twitter">Changed to Twitter as data source</string>
    <string name="data_source_change_osm">Changed to OpenStreetMap as data source</string>

    <string name="search_failed_notification">No search results</string>
    <string name="source_openstreetmap">Stations around</string>

    <string name="search_active_1">Search on data source</string>
    <string name="search_active_2">. Touch to terminate search</string>
    <string name="download_error">Error while downloading</string>
    <string name="download_received">Received data from</string>

    <string name="add_osm_menu">Add OpenStreetMap URL</string>
    <string name="insert_osm_url">Insert OpenStreetMap URL</string>
    <string name="osm_max_object_menu">Set max POI per URL</string>
    <string name="set_osm_max_object">Maximum POIs per URL</string>
    <string name="location_not_found">Location not found, make sure you enabled Wifi location or GPS in the settings.</string>
    <string name="refreshing">Refreshing</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_arview">AR view</string>
    <string name="navigation_drawer_navermap">Naver map</string>
    <string name="navigation_drawer_search">Search</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_email">Email to developer</string>
    <string name="navigation_drawer_homepage">Homepage</string>
    <string name="navigation_drawer_license">License</string>

    <string name="settings_drawer_filtering">Filtering</string>

    <string name="navigation_drawer_header">GNU AR MAP</string>
    <string name="navigation_drawer_header1">Functions</string>
    <string name="navigation_drawer_header2">Settings</string>
    <string name="navigation_drawer_header3">Etc</string>
    <string name="navigation_drawer_maker">Made by Team Observer</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_drawer_arview">AR View</string>
    <string name="settings_drawer_1st_filtering">Filtering (Building)</string>
    <string name="settings_drawer_2nd_filtering">Filtering (Facilities)</string>
    <string name="settings_drawer_navermap">Naver Map</string>

    <string name="settings_drawer_arview_header">AR View Settings</string>
    <string name="settings_drawer_filtering_header">Filtering Settings</string>
    <string name="settings_drawer_navermap_header">Naver Map Settings</string>

    <string name="permission_rejected">"If you reject permission,you can not use this service

Please turn on permissions at [Setting] > [Permission]"</string>

    <string name="NMapSetView">Use satellite map</string>
    <string name="NaverMarker">Show on Naver map</string>
    <string name="WebSite">Go to website of this building</string>
    <string name="Navi">Turn on navigation</string>
    <string name="MoreView">Get more view on AR</string>

    <string name="Filtering_All">Show all</string>
    <string name="Filtering_ATM">ATM</string>
    <string name="Filtering_CVS">Convience Store</string>
    <string name="Filtering_Vending">Vending Machine</string>
    <string name="Filtering_Printer">Printer</string>

    <string name="Filtering_Business">College of Business Administration</string>
    <string name="Filtering_Engnieering">College of Engineering</string>
    <string name="Filtering_Dormitory">Dormitory</string>
    <string name="Filtering_ETC">ETC</string>
    <string name="Filtering_Door">Door</string>
    <string name="Filtering_Agriculture">College of Agriculture and Life Sciences</string>
    <string name="Filtering_University">University building</string>
    <string name="Filtering_Club">Club</string>
    <string name="Filtering_Veterinary">Veterinary college</string>
    <string name="Filtering_Law">College of Law</string>
    <string name="Filtering_Education">College of Education</string>
    <string name="Filtering_Social">College of Social Science</string>
    <string name="Filtering_Leisure">Leisure facilities</string>
    <string name="Filtering_Humanities">College of Humanities</string>
    <string name="Filtering_Natural">College of Natural Science</string>

    <string name="App_Version">1.0-r1</string>
    <string name="title_activity_settings2">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
