<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/navigation_drawer_header1">
        <menu>
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/navigation_drawer_arview"/>
            <item
                android:id="@+id/design_navigation_view"
                android:icon="@drawable/ic_menu_map"
                android:title="@string/navigation_drawer_navermap" />
        </menu>
    </item>

    <item android:title="@string/navigation_drawer_header2">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/navigation_drawer_settings" />
    </item>

    <item android:title="@string/navigation_drawer_header3">
        <menu>
            <item
                android:id="@+id/nav_email"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/navigation_drawer_email" />
            <item
                android:id="@+id/nav_homepage"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/navigation_drawer_homepage" />
            <item
                android:id="@+id/nav_license"
                android:icon="@drawable/ic_menu_license"
                android:title="@string/navigation_drawer_license" />
        </menu>
    </item>
</menu>
