<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 <!-- 설정 액티비티에 들어갈 요소 결정, -->
 <PreferenceCategory
     android:title="@string/settings_drawer_arview"
     android:key="ar_view_setting">
  <SwitchPreference
      android:defaultValue="false"
      android:key="MoreView"
      android:title="@string/MoreView" />
 </PreferenceCategory>

 <PreferenceCategory
     android:title="@string/settings_drawer_navermap"
 android:key="naver_map_setting">
  <SwitchPreference
      android:defaultValue="true"
      android:key="MMapViewSet"
      android:title="@string/NMapSetView" />
 </PreferenceCategory>
<!-- 각 건물에 대한 필터링 추가 -->
 <PreferenceCategory
     android:title="@string/settings_drawer_1st_filtering"
    android:key="filtering_setting">
  <SwitchPreference
      android:defaultValue="false"
      android:key="check_box_preference_1"
      android:title="Check box preference" />
  <SwitchPreference
      android:defaultValue="false"
      android:key="check_box_preference_1"
      android:title="Check box preference" />
  <SwitchPreference
      android:defaultValue="false"
      android:key="check_box_preference_1"
      android:title="Check box preference" />
  <SwitchPreference
      android:defaultValue="false"
      android:key="check_box_preference_1"
      android:title="Check box preference" />
  <SwitchPreference
      android:defaultValue="false"
      android:key="check_box_preference_1"
      android:title="Check box preference" />
  <SwitchPreference
      android:defaultValue="false"
      android:key="check_box_preference_1"
      android:title="Check box preference" />
 </PreferenceCategory>
<!-- 1차 필터링 및 2차 필터링에 대한 체크박스들 -->
 <PreferenceCategory
     android:title="@string/settings_drawer_2nd_filtering"
     android:key="filtering_setting">
  <SwitchPreference
      android:defaultValue="false"
      android:key="All"
      android:title="@string/Filtering_All"
      android:disableDependentsState="true"/>
  <SwitchPreference
      android:defaultValue="false"
      android:key="ATM"
      android:title="@string/Filtering_ATM"
      android:dependency="All"/>
  <SwitchPreference
      android:defaultValue="false"
      android:key="CVS"
      android:title="@string/Filtering_CVS"
      android:dependency="All"/>
  <SwitchPreference
      android:defaultValue="false"
      android:key="Vending"
      android:title="@string/Filtering_Vending"
      android:dependency="All"/>
  <SwitchPreference
      android:defaultValue="false"
      android:key="Printer"
      android:title="@string/Filtering_Printer"
      android:dependency="All"/>
  <!-- 각 시설에 대한 필터링을 추가 -->
 </PreferenceCategory>


</PreferenceScreen>

